--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body{
     color: #333;
     text-align: center;
     font-size: 16px;
-    font-family: Courier;
+    font-family: Arial;
     margin: 0;
     padding: 0;
 }
